--- a/journals/2023_11_21.md
+++ b/journals/2023_11_21.md
@@ -1,4 +1,55 @@
-# 徳丸本
+# はじめて学ぶバイナリ解析
+- 環境構築
+	- VirtualBox 7.0
+	- Ubuntu_for_binary_analysis.ovaをダウンロードしてきて、VirtualBoxのファイル→仮想アプライアンスのインポートで、Ubuntu_for_binary_analysis.ovaを指定
+- hexedit : バイナリエディタを起動
+- gccでは-Sをつけるとコンパイルをアセンブリコードの段階で止めることが出来る
+	- ```
+	  $ gcc compile_2-1.c -S # compile_2_1.sが作成される
+	  $ cat compile_2-1.s # テキストファイルなのでcatで見れる
+	  ```
+- strings : 指定したバイナリを1バイト毎にASCIIコードとして解釈してみて、印字可能な文字が連続している部分があれば抜き出して表示してくれるコマンド
+	- ```
+	  $ strings a.out | grep ^[^_.]
+	  ```
+	- _や.から始まる文字列が多いので取り除きたい
+	- \[^\_.]は_と.を除く全ての文字を表し、^\[^\_.]と書くことで、_と.以外の文字から始まる文字列を抽出出来る
+- echoでは-eをつけるとASCIIコードを文字に変換することが出来る
+	- ```
+	  $ echo -e "\x21"
+	  !
+	  ```
+	- 通常入力出来ない印字不可能な文字(0x20未満及び0x7Fの文字のこと)(制御文字とも言う)も出力させることが出来る
+- Pythonライブラリのpwntoolsはプロセスと入出力のやり取りをするツール
+	- ```python
+	  from pwn import *
+	  p = process('./a.out')
+	  p.sendline('\x01\x02\x03\x04\x05')
+	  print(p.recvline())
+	  ```
+	- processで、プロセスを立ち上げる(上の例では、process('./a.out')となっているが、process('cat')とかでも良い)
+	- sendlineで、バイナリを実行しているプロセスに標準入力として、sendlineの引数が渡される
+	- recvlineで、バイナリを実行しているプロセスの標準出力を改行が現れるところまで出力する
+- バイトオーダ
+	- 123456789という数値は16進数で表現すると、0x499602d2となる
+	- CPUのメモリには1バイト毎にアドレスが割り振られている
+	- アドレスの昇順に0x49 0x96 0x02 0xd2と並べるのがビッグエンディアン
+	- アドレスの昇順に0xd2 0x02 0x96 0x49と並べるのがリトルエンディアン
+	- リトルエンディアンが使われることが多い
+	- バイトオーダを考えるのは、1つのデータが複数バイトにまたがる時だけ
+	- 文字列は文字型の配列で、配列はバイトオーダ関係なく、添字の小さい方がアドレスの小さい方に配置される
+		- ```c
+		  #include <stdio.h>
+		  
+		  int main(void){
+		      char s[] = "flag";
+		      printf("%p\n", &s[0]); // 0x7ffeb0797c03
+		      printf("%p\n", &s[1]); // 0x7ffeb0797c04
+		      printf("%p\n", &s[2]); // 0x7ffeb0797c05
+		      printf("%p\n", &s[3]); // 0x7ffeb0797c06
+		  }
+		  ```
+- # 徳丸本
 - ## 8章 Webサイトの安全性を高めるために
 - ### 8.2 成りすまし対策
 	- 成りすましとは、偽のWebサイトが正規サイトに成りすますこと
