--- a/journals/2023_11_21.md
+++ b/journals/2023_11_21.md
@@ -31,6 +31,7 @@
 	- sendlineで、バイナリを実行しているプロセスに標準入力として、sendlineの引数が渡される
 	- recvlineで、バイナリを実行しているプロセスの標準出力を改行が現れるところまで出力する
 - バイトオーダ
+  id:: 655e6026-2c96-4674-bde6-255a1dba0cac
 	- 123456789という数値は16進数で表現すると、0x499602d2となる
 	- CPUのメモリには1バイト毎にアドレスが割り振られている
 	- アドレスの昇順に0x49 0x96 0x02 0xd2と並べるのがビッグエンディアン
