--- a/journals/2023_11_27.md
+++ b/journals/2023_11_27.md
@@ -13,6 +13,7 @@
 		- EBP(スタックベースポインタ) : 実行中の関数のスタックのボトム
 		- EIP(インストラクションポインタ) : 次に実行する命令のアドレス
 			- CPUはEIPレジスタが指すアドレスにアクセスして、次に実行する命令を知ることが出来る
+			- CPUが命令を取り出すと、EIPは次の命令のアドレスに移動する([参考1](https://nsas454.hatenablog.com/entry/20110421/1303405864), [参考2](https://detail.chiebukuro.yahoo.co.jp/qa/question_detail/q12182605087))
 	- フラグレジスタ
 		- 命令や演算の実行結果として生じた状態を保存するレジスタ
 		- EFLAGSという32ビットの1つのレジスタにまとめられている([参考](https://www.wdic.org/w/SCI/EFLAGS))
