--- a/journals/2023_12_06.md
+++ b/journals/2023_12_06.md
@@ -37,6 +37,11 @@
 		  # https://mebee.info/2020/06/11/post-12304/
 		  $ sudo apt -y install build-essential
 		  ```
+	- nasmのインストール
+		- ```shell
+		  # https://qiita.com/C_Assembly/items/a20b0fa085be1bdb4f59
+		  $ sudo apt -y install nasm
+		  ```
 	- gdb+pedaのインストール
 		- ```shell
 		  # https://detail.chiebukuro.yahoo.co.jp/qa/question_detail/q13235899248
