--- a/journals/2023_12_08.md
+++ b/journals/2023_12_08.md
@@ -38,6 +38,7 @@
 			- xor rax, raxなど
 			- mov rax, 0よりも機械語にした時のサイズが小さくなる
 		- mov eax, eaxだと、下位32ビットのみが0になりそうだが、仕様上raxレジスタ全体が0になる
+			- x86-64では32ビットのレジスタに計算結果を代入する時は、ゼロ拡張されて64ビットごと上書きされる
 	- not命令
 		- 第1オペランドの否定を取り、結果を第1オペランドに格納する
 	- shl命令、shr命令、sal命令、sar命令
@@ -70,11 +71,14 @@
 			- プログラムを逆アセンブルすると、一般的にアドレスになっているが、アセンブリコードを書くときはラベルを指定出来る
 		- フラグレジスタの値に関係なくジャンプする
 	- jz命令、je命令
+		- if (... = ...) に対応
 		- ZFが1の時にジャンプする
 		- それぞれJump if Zero, Jump if Equalの略
 	- jnz命令、jne命令
+		- if (... != ...) に対応
 		- ZFが0の時にジャンプする
 		- それぞれJump if Not Zero, Jump if Not Equalの略
 	- ja命令、jae命令
+		- それぞれif (... > ...), if (... ≥ ...)に対応(比較は符号なし)
 		- jaはCF=0 かつ ZF=0のとき、jaeはCF=0のときにジャンプする
 		- それぞれJump if Above, Jump if Above or Equalの略
