--- a/journals/2023_12_10.md
+++ b/journals/2023_12_10.md
@@ -11,7 +11,7 @@
 		- それぞれJump if Greater, Jump if Greater or Equalの略
 	- jl命令、jle命令
 		- それぞれif (... < ...), if (... ≤ ...)に対応(比較は符号付き)
-		- jlはSF!=OF(jgeの時の否定)、jleはZF=1 かつ SF!=OF(jgの時の否定)のときにジャンプする
+		- jlはSF!=OF(jgeの時の否定)、jleはZF=1 または SF!=OF(jgの時の否定)のときにジャンプする
 		- それぞれJump if Less, Jump if Less or Equalの略
 	- スタック操作
 		- push src : rspが8減り、rspが指す先にsrcが積まれる
