--- a/journals/2023_12_07.md
+++ b/journals/2023_12_07.md
@@ -4,6 +4,7 @@
 	- ReversingはReverse Engineeringの略
 	- Reversingの流れ
 		- 表層解析
+		  id:: 6571c4f4-dec8-4923-907f-a5093d11a3ca
 			- fileコマンド
 				- ```shell
 				  $ file program
