--- a/journals/2024_04_02.md
+++ b/journals/2024_04_02.md
@@ -48,6 +48,8 @@
 				- 解答例 : L3SW1
 			- 設定内容 : 分からない
 				- 解答例 : OSPFエリア1の支社個別経路を172.16.0.0/16に集約する
+				- https://thinkit.co.jp/article/18955
+					- L3SW1では経路集約が行われていないが、L3SW1とルータがOSPF仮想リンクで繋がっているので、L3SW1で受け取った経路情報がルータに届けられ、ロンゲストマッチにより、ルータの経路集約が使われなくなる
 	- メモ
 		- IPSec
 			- IPパケットの暗号化、認証の機能を提供するプロトコル
@@ -89,6 +91,24 @@
 			- ダイクストラ法における辺の重みは100Mbs / 帯域幅(bps)で計算される
 				- 10Mbsの場合は10、100Mbsの場合は1、1Gbpsの場合は計算上は0.1だけど1として扱うらしい
 			- コスト最小の経路が複数存在する場合は分散される
+			- エリア([参考](https://www.infraexpert.com/study/ospfz4.html))
+				- エリアに分割し、異なるエリアについての情報は経路集約された情報のみ保持する
+				- 同じエリア内の全てのルータは同じLSDBを保持する
+				- エリアに分割することで以下のメリットがある
+					- LSDBのサイズが小さくなる
+					- ネットワーク構成変更時に再計算する頻度が減る(異なるエリアの変更は無視するため)
+					- ルーティングテーブルのサイズが縮小する
+				- ルータのインタフェース毎に参加するエリアを指定する
+				- 異なるエリア同士を接続するルータをABR(Area Border Router)と呼ぶ
+					- ABRは異なるエリアのルータを経路集約して内部ルータに通知する
+				- 異なるAS同士を接続するルータをASBR(AS Boundary Router)と呼ぶ
+					- AS(Autonomous System)とは、共通のプロトコルで経路情報をやり取りする範囲のこと
+					- 例えば、OSPFを使う範囲とRIPを使う範囲は異なるASになる
+				- エリア0をバックボーンエリアと呼び、非バックボーンエリアは全てバックボーンエリアに接続されていなければいけない
+					- バックボーンエリアの存在意義が不明
+					- バックボーンエリアは分割できない
+						- 直接接続出来ない場合は、OSPF仮想リンクという仕組みを使う
+						- OSPF仮想リンクがどういう仕組みなのかは不明
 		- L3SW([参考1](https://nttdocomo-ssw.com/nssw/dhkr/ouchinetpress/communication/article147/)、[参考2](https://e-words.jp/w/L3%E3%82%B9%E3%82%A4%E3%83%83%E3%83%81.html)、[参考3](https://www.nuro.jp/article/l3suitchi-router/))
 			- 結局よく分からない
 			- L2SWとルーティング機能を備えた機器らしい
