--- a/journals/2024_04_01.md
+++ b/journals/2024_04_01.md
@@ -7,7 +7,7 @@
 		- MDI同士、MDI-X同士を接続する時はクロスケーブル、MDIとMDI-Xを接続する時はストレートケーブルを用いる
 		- Automatic(Auto) MDI/MDI-Xを備えた機器は、通信相手のインターフェースがMDIかMDI-Xかを判別して、自身のポートを変更することが出来るため、ケーブルの使い分けをしなくて済む
 	- スイッチの設定
-		- hostnameとIPアドレスを設定する
+		- hostname、IPアドレス、サブネットマスクを設定する
 		- ```
 		  Switch>en
 		  Switch#conf t
