--- a/journals/2024_04_05.md
+++ b/journals/2024_04_05.md
@@ -81,6 +81,9 @@
 	- 事前にPC0からPC2にpingを飛ばしておいて、PC/ルータのARPテーブル、スイッチのMACアドレステーブルを作成する
 		- PC0のARPテーブル
 			- ```
+			  C:\>arp -a
+			    Internet Address      Physical Address      Type
+			    10.1.1.1              0004.9a04.9301        dynamic
 			  ```
 			- RT1のFa0/0(=PC0のデフォルトゲートウェイ)のMACアドレスが記録されている
 		- RT1のARPテーブル
@@ -126,6 +129,15 @@
 	- PC0からPC2にtracertを飛ばす(`tracert 30.1.1.20` UNIXではtraceroute)
 		- ![2024_4_5_2.mov](../assets/2024_4_5_2_1712394225271_0.mov)
 		- ```
+		  C:\>tracert 30.1.1.20
+		  
+		  Tracing route to 30.1.1.20 over a maximum of 30 hops: 
+		  
+		    1   2 ms      2 ms      2 ms      10.1.1.1
+		    2   4 ms      4 ms      4 ms      20.1.1.2
+		    3   8 ms      8 ms      8 ms      30.1.1.20
+		  
+		  Trace complete.
 		  ```
 		- PC0はまずTTLが1のICMPパケットを送信する
 			- PC0からRT1へのICMPパケット
@@ -147,7 +159,7 @@
 					- 送信元IPアドレスと送信先IPアドレスはPC0からRT1へのICMPパケットと変わらないが、送信元MACアドレスはRT2のFa0/1のMACアドレス、送信先MACアドレスはPC2のMACアドレスに変化している
 			- DATAと書いてある部分はICMPのデータが入る
 				- フォーマットについては[ここ](https://www.infraexpert.com/study/tcpip4.html)を参照
-				- タイプは、0(エコー応答)、8(エコー要求)、11(時間超過)など
+				- タイプは、0(エコー応答)、3(到達不能)、8(エコー要求)、11(時間超過)など
 			- TTLが1のICMPパケットを受け取ったRT1はTTLを1減らし、TTLが0になったので、ICMP時間超過メッセージを返す
 				- ![2024_4_5_5.png](../assets/2024_4_5_5_1712396546750_0.png){:height 409, :width 776}
 				- ICMPのタイプが11(時間超過)になっている
