--- a/journals/2023_08_05.md
+++ b/journals/2023_08_05.md
@@ -1,4 +1,4 @@
-- # 暗号技術入門
+# 暗号技術入門
 - ## 第14章 SSL/TLS
 - ### SSL/TLSとは
 	- TLSはSSLの新しいバージョン
@@ -32,56 +32,42 @@
 	- TLSハンドシェイクプロトコル
 		- ハンドシェイクプロトコル、暗号仕様変更プロトコル、警告プロトコル、アプリケーションデータプロトコルに分かれている
 		- ハンドシェイクプロトコル
-			- ClientHello (クライアント → サーバ)
-			  logseq.order-list-type:: number
+			- 1. ClientHello (クライアント → サーバ)
 				- 使用出来るバージョン番号、使用出来る暗号スイートの一覧、使用出来る圧縮方法の一覧を送る
 				- クライアントランダムという、クライアントが生成した予測不可能性を持つ乱数も送る
-			- ServerHello (クライアント ← サーバ)
-			  logseq.order-list-type:: number
+			- 2. ServerHello (クライアント ← サーバ)
 				- ClientHelloで送ってきた情報を元にして、使用出来るバージョン番号、使用出来る暗号スイートの一覧、使用出来る圧縮方法をサーバが決めて送る
 				- サーバランダムという、サーバが生成した予測不可能性を持つ乱数も送る(クライアントランダムと無関係でなければいけない)
-			- Certificate (クライアント ← サーバ)
-			  logseq.order-list-type:: number
+			- 3. Certificate (クライアント ← サーバ)
 				- サーバの証明書が送られる、クライアントはこれを検証する
-			- ServerKeyExchange (クライアント ← サーバ)
-			  logseq.order-list-type:: number
+			- 4. ServerKeyExchange (クライアント ← サーバ)
 				- 暗号化の鍵について、Certificateだけでは情報が足りない時に必要な情報を送る
 					- Diffie-Hellman鍵交換を用いる場合の、サーバ側の公開値など
-			- CertificateRequest (クライアント ← サーバ)
-			  logseq.order-list-type:: number
+			- 5. CertificateRequest (クライアント ← サーバ)
 				- クライアント認証のために、サーバがクライアントの証明書を要求する(クライアント認証を用いない場合は送信されない)
-			- ServerHelloDone (クライアント ← サーバ)
-			  logseq.order-list-type:: number
+			- 6. ServerHelloDone (クライアント ← サーバ)
 				- ServerHelloから始まる一連のメッセージの終わりを示す
-			- Certificate (クライアント → サーバ)
-			  logseq.order-list-type:: number
+			- 7. Certificate (クライアント → サーバ)
 				- CertificateRequestが送られてきた場合、クライアントは自分の証明書を送る、サーバはこれを検証する
-			- ClientKeyExchange (クライアント → サーバ)
-			  logseq.order-list-type:: number
+			- 8. ClientKeyExchange (クライアント → サーバ)
 				- RSAを用いる場合、サーバの公開鍵で暗号化されたプレマスターシークレットが送信される
 					- プレマスターシークレットとはクライアントが作った乱数で、マスターシークレットを作るための種の役割をするもの
 					- プレマスターシークレットを使って、サーバとクライアントは共通のマスターシークレットを計算し、このマスターシークレットを元に対称暗号の鍵、メッセージ認証コードの鍵、対称暗号のCBCモードで用いる初期化ベクトルを作り出す
 				- Diffie-Hellman鍵交換を用いる場合、公開値が送られる
-			- CertificateVerify (クライアント → サーバ)
-			  logseq.order-list-type:: number
+			- 9. CertificateVerify (クライアント → サーバ)
 				- クライアントがクライアント証明書の本人であることを示すためのメッセージ
 					- それは認証局の役割では？クライアント証明書とサーバ証明書は何か違う？
-			- ChangeCipherSpec (クライアント → サーバ)
-			  logseq.order-list-type:: number
+			- 10. ChangeCipherSpec (クライアント → サーバ)
 				- クライアントが暗号を切り替えるというメッセージ(暗号仕様変更プロトコルのメッセージ)
-			- Finished (クライアント → サーバ)
-			  logseq.order-list-type:: number
+			- 11. Finished (クライアント → サーバ)
 				- Finishedメッセージを送って、ハンドシェイクプロトコルが終了したことを伝える
 				- Finishedメッセージは切り替えた暗号スイートで暗号化されて送られる(実際に暗号化をするのはTLSレコードプロトコル)
 					- サーバはこれを復号化して、正しいFinishedメッセージが得られることで、クライアント側の暗号スイートが正しく切り替わったことを確認する
-			- ChangeCipherSpec (クライアント ← サーバ)
-			  logseq.order-list-type:: number
+			- 12. ChangeCipherSpec (クライアント ← サーバ)
 				- サーバが暗号を切り替えるというメッセージ
-			- Finished (クライアント ← サーバ)
-			  logseq.order-list-type:: number
+			- 13. Finished (クライアント ← サーバ)
 				- クライアントと同様、サーバも切り替えた暗号スイートでFinishedメッセージを暗号化して送る
-			- アプリケーションデータプロトコルへ移行
-			  logseq.order-list-type:: number
+			- 14. アプリケーションデータプロトコルへ移行
 		- 暗号仕様変更プロトコル
 			- 暗号を切り替える合図を行うためのもの
 			- 一旦暗号通信を始めた後でも再度ハンドシェイクをして、暗号スイートを変更することが可能
