--- a/journals/2024_03_29.md
+++ b/journals/2024_03_29.md
@@ -35,7 +35,7 @@
 			- ルータを介さずに通信出来る範囲
 			- リピータやブリッジ、ハブ、ネットワークスイッチを介して繋がれている範囲は全て同じブロードキャストドメイン
 		- traceroute
-			- TTLが1のUDPパケットを送信 → TTLが2のUDPパケットを送信 → ... とする
+			- TTLが1のICMPパケットを送信 → TTLが2のICMPパケットを送信 → ... とする
 			- ルータを経由するとTTLが1減る
 			- TTLが0になるとICMP時間超過メッセージがルータから返されるため、経路中のルータの存在を知ることが出来る
 			- スイッチのIPは表示されない([参考](https://qiita.com/S-T/items/4b4815a408a2ad71a58a))
