--- a/journals/2024_04_06.md
+++ b/journals/2024_04_06.md
@@ -38,9 +38,6 @@
 			- ```
 			  RT2(config)#ip route 10.1.1.0 255.255.255.0 20.1.1.1
 			  RT2(config)#exit
-			  RT2#
-			  %SYS-5-CONFIG_I: Configured from console by console
-			  
 			  RT2#show ip route
 			  Codes: L - local, C - connected, S - static, R - RIP, M - mobile, B - BGP
 			         D - EIGRP, EX - EIGRP external, O - OSPF, IA - OSPF inter area
@@ -101,7 +98,31 @@
 		- 次にRT2のデフォルトルートをRT1に設定する
 			- ```
 			  RT2(config)#ip route 0.0.0.0 0.0.0.0 20.1.1.1
+			  RT2(config)#exit
+			  RT2#show ip route
+			  Codes: L - local, C - connected, S - static, R - RIP, M - mobile, B - BGP
+			         D - EIGRP, EX - EIGRP external, O - OSPF, IA - OSPF inter area
+			         N1 - OSPF NSSA external type 1, N2 - OSPF NSSA external type 2
+			         E1 - OSPF external type 1, E2 - OSPF external type 2, E - EGP
+			         i - IS-IS, L1 - IS-IS level-1, L2 - IS-IS level-2, ia - IS-IS inter area
+			         * - candidate default, U - per-user static route, o - ODR
+			         P - periodic downloaded static route
 			  
+			  Gateway of last resort is 20.1.1.1 to network 0.0.0.0
+			  
+			       10.0.0.0/24 is subnetted, 1 subnets
+			  S       10.1.1.0/24 [1/0] via 20.1.1.1
+			       20.0.0.0/8 is variably subnetted, 2 subnets, 2 masks
+			  C       20.1.1.0/24 is directly connected, FastEthernet0/0
+			  L       20.1.1.2/32 is directly connected, FastEthernet0/0
+			       30.0.0.0/8 is variably subnetted, 6 subnets, 2 masks
+			  C       30.1.1.0/24 is directly connected, FastEthernet0/1
+			  L       30.1.1.1/32 is directly connected, FastEthernet0/1
+			  C       30.1.2.0/24 is directly connected, FastEthernet1/0
+			  L       30.1.2.1/32 is directly connected, FastEthernet1/0
+			  C       30.1.3.0/24 is directly connected, FastEthernet1/1
+			  L       30.1.3.1/32 is directly connected, FastEthernet1/1
+			  S*   0.0.0.0/0 [1/0] via 20.1.1.1
 			  ```
 		- 再度PC0で`ping 30.1.0.10`を実行する
 			- 今度はRT1とRT2でルーティングループが発生する
