--- a/journals/2023_07_12.md
+++ b/journals/2023_07_12.md
@@ -1,4 +1,4 @@
-- # 暗号技術入門
+# 暗号技術入門
 - ## 第3章 対称暗号(共通鍵暗号)
 - ### 使い捨てパッド(バーナム暗号)
 	- 平文とランダムなビット列とのXORを取る暗号
@@ -58,9 +58,3 @@
 			- 実質的にはECBモードと同じになる
 			- 初期化ベクトルと暗号文ブロック1のXORが平文ブロック1をブロック暗号アルゴリズムで暗号化した結果になる
 			- 暗号文ブロック1と暗号文ブロック2のXORが平文ブロック2をブロック暗号アルゴリズムで暗号化した結果になる
-		-
-	-
-	-
-	-
-	-
-	-
