--- a/journals/2023_07_27.md
+++ b/journals/2023_07_27.md
@@ -1,4 +1,4 @@
-- # 暗号技術入門
+# 暗号技術入門
 - ## 第9章 デジタル署名
 - ### デジタル署名(電子署名)
 - メッセージ認証コードは第三者に対する認証と否認防止には役立たない
@@ -64,8 +64,7 @@
 		- 署名対象となるのが意味のないメッセージであったとしても、正しいデジタル署名が作れてしまうことをデジタル署名の潜在的偽造という
 		- RSAの場合は、潜在的偽造が可能
 			- ランダムなビット列Sについて、RSAの公開鍵で暗号化したものをMとすると、Mのデジタル署名がSになるため(S = M ^ D mod N)
-				- ~~mod N で M = S ^ E → 両辺をD乗して、mod N で M ^ D = S ^ E ^ D → RSAにおけるEとDの条件より、S = S ^ E ^ D mod N → S = M ^ D mod N~~ 嘘証明
-			- Sをデジタル署名として付与することで、公開鍵を持つ人がメッセージMを送ったことにすることが出来る
+			- 公開鍵は誰でも入手可能なので、悪意のある第三者によってメッセージMを送ったことにされてしまう
 				- このことからも公開鍵暗号で使う鍵ペアとデジタル署名で使う鍵ペアを分けることが大事
 - ### デジタル署名でも解決できない問題
 	- 署名の検証を行う時に用いる公開鍵が、本物の送信者のものか分からない
