--- a/journals/2024_04_07.md
+++ b/journals/2024_04_07.md
@@ -130,6 +130,7 @@
 			  icmp 20.1.1.3:61       10.1.1.10:61       30.1.1.10:61       30.1.1.10:61
 			  ```
 			- ポート番号の代わりとして使われているのは、ICMPパケット内のSEQ NUMBERだった([検証記事](https://izuminmin.com/network/icmpping-napt/))
+	- NATテーブルを見ると、変換前のポート番号がそのまま変換後のポート番号になるように見えるが、例えば、PC0とPC1が両方ともポート番号3000で通信を始めたら、PC0の変換後ポートは3000、PC1の変換後ポートは3001になったりする([参考](https://okwave.jp/qa/q8295302.html))
 - ### NATトラバーサル(NAT超え)
 	- [参考](https://e-words.jp/w/NAT%E3%83%88%E3%83%A9%E3%83%90%E3%83%BC%E3%82%B5%E3%83%AB.html)
 	- RT2で`ip route 10.1.1.0 255.255.255.0 20.1.1.1`をすれば、Server0から10.1.1.10, 10.1.1.20, 10.1.1.30を指定してpingを飛ばすことが出来る
