--- a/journals/2024_04_02.md
+++ b/journals/2024_04_02.md
@@ -83,13 +83,16 @@
 				- ESPで暗号化される範囲にIPペイロードが含まれているので、IPペイロードの中のTCPヘッダ / UDPヘッダも暗号化されることになる
 				- TCPヘッダ / UDPヘッダが暗号化されているとFWのアクセス制御が柔軟に行えないという欠点があるとのこと
 		- OSPF(Open Shortest Path Protocol)([参考](https://www.infraexpert.com/study/ospfz2.html))
+		  id:: 660d7c07-9e35-42e2-945f-eff27ca50eba
 			- ダイナミックルーティングプロトコルの一種
 			- 簡単に言うと、ルータ同士が情報を交換し合って、各ルータがネットワーク構成(グラフ)を把握し、ダイクストラ法を使って、ルーティングテーブルを生成する
 			- LSA(Link State Advertisement)と呼ばれる情報を送信し合う
 				- LSAはLSDB(Link State Database)に保存される
+				- LSAには何個か種類がある(ルータLSA、ネットワークLSAなど)
+				- 指名ルータ(DR : Desinated Router)というのが存在していて、全てのルータ間でLSAを交換するのではなく、指名ルータを介してLSAを交換する
 			- 各ルータはLSDB内のLSAを組み合わせてネットワーク構成を把握する
-			- ダイクストラ法における辺の重みは100Mbs / 帯域幅(bps)で計算される
-				- 10Mbsの場合は10、100Mbsの場合は1、1Gbpsの場合は計算上は0.1だけど1として扱うらしい
+			- ダイクストラ法における辺の重みは100Mbps / 帯域幅(bps)で計算される
+				- 10Mbpsの場合は10、100Mbpsの場合は1、1Gbpsの場合は計算上は0.1だけど1として扱うらしい
 			- コスト最小の経路が複数存在する場合は分散される
 			- エリア([参考](https://www.infraexpert.com/study/ospfz4.html))
 				- エリアに分割し、異なるエリアについての情報は経路集約された情報のみ保持する
@@ -99,9 +102,9 @@
 					- ネットワーク構成変更時に再計算する頻度が減る(異なるエリアの変更は無視するため)
 					- ルーティングテーブルのサイズが縮小する
 				- ルータのインタフェース毎に参加するエリアを指定する
-				- 異なるエリア同士を接続するルータをABR(Area Border Router)と呼ぶ
+				- 異なるエリア同士を接続するルータをエリア境界ルーター(AR : Area Border Router)と呼ぶ
 					- ABRは異なるエリアのルータを経路集約して内部ルータに通知する
-				- 異なるAS同士を接続するルータをASBR(AS Boundary Router)と呼ぶ
+				- 異なるAS同士を接続するルータをAS境界ルータ(ASBR : AS Boundary Router)と呼ぶ
 					- AS(Autonomous System)とは、共通のプロトコルで経路情報をやり取りする範囲のこと
 					- 例えば、OSPFを使う範囲とRIPを使う範囲は異なるASになる
 				- エリア0をバックボーンエリアと呼び、非バックボーンエリアは全てバックボーンエリアに接続されていなければいけない
