--- a/journals/2024_04_12.md
+++ b/journals/2024_04_12.md
@@ -11,7 +11,7 @@
 		  ```
 		- `router ospf 1`
 			- OSPFプロセスを有効化する
-			- 1はプロセスIDで、1~65535の範囲で指定し、他のルータを一致させる必要はない
+			- 1はプロセスIDで、1~65535の範囲で指定し、他のルータと一致させる必要はない
 		- `network 10.1.1.0 0.0.0.255 area 0`, `network 172.16.1.0 0.0.0.255 area 0`, `network 172.16.2.0 0.0.0.255 area 0`
 			- 属するネットワークを指定する
 			- 0.0.0.255はワイルドカードマスクである
