--- a/journals/2023_10_06.md
+++ b/journals/2023_10_06.md
@@ -55,6 +55,7 @@
 			- スイッチングハブにおいて、特定のポートに流れているデータをコピーして別のポートに流す機能
 			- 前者のポートをモニターポート、後者のポートをミラーポートと呼ぶ
 		- DHCPの仕組み([参考](https://xtech.nikkei.com/atcl/nxt/column/18/00780/062000010/))
+		  id:: 6520471c-18e8-4e32-b9de-ff82198b12be
 			- IPアドレスの割り当てには静的と動的がある
 			- 静的はユーザが設定し、動的はクライアントとDHCPサーバが通信し、自動で設定される
 			- DHCPサーバは、IPアドレスを割り当てるだけではなく、サブネットマスクやデフォルトゲートウェイ、DNSサーバも設定する
@@ -71,9 +72,11 @@
 				- 4. DHCP確認応答パケット(DHCP ACK)(クライアント←DHCPサーバ)
 					- サブネットマスク、デフォルトゲートウェイ、DNSサーバなどを送信する
 					- ユニキャストで送信する
-			- DHCPサーバから提供される情報には有効期間が設定されていて(リース期間という)、これを過ぎると、別のクライアントにIPアドレスが割り当てられる
-			- リース期間を延長したい場合は、クライアントからDHCPサーバに再度DHCP要求パケットを送信する
-			- DHCPサーバからDHCP確認応答パケットが来たら、リース期間を延長することが出来る
+			- DHCPサーバから提供される情報には有効期間が設定されている(リース期間という)
+				- リース期間が半分を過ぎると、クライアントからDHCPサーバに再度DHCP要求パケットを送信する([参考](https://www.netattest.com/dhcp_2022_mkt_fsp))
+				- DHCPサーバからDHCP確認応答パケットが来たら、リース期間を延長することが出来る
+				- どちらもユニキャストで送信する
+				- この仕組みによって、基本的にはDHCPクライアントのIPアドレスは変更されない
 		- TCPの通信の流れ([参考](https://www.infraexpert.com/study/tcpip9.html))
 			- TCPヘッダ([参考](https://www.infraexpert.com/study/tcpip8.html))
 				- シーケンス番号 : 送信したデータの開始位置、Byte単位
