--- a/journals/2024_04_17.md
+++ b/journals/2024_04_17.md
@@ -83,7 +83,7 @@
 			  ```
 			- SW5も同様に設定
 		- VLANを識別するために ((660ae19f-54fb-48da-96f2-7e632458cea0)) の送信元MACアドレスとタイプの間にVLAN IDが挿入される
-		- PC9からPC11にpingを飛ばした時のSW4を通過するパケットのL2ヘッダを確認する
+		- PC9からPC11にpingを飛ばした時の行きの経路でSW4を通過するパケットのL2ヘッダを確認する
 			- Inbound
 				- ![2024_4_17_5.png](../assets/2024_4_17_5_1713372002404_0.png){:height 313, :width 670}
 				- この時点ではVLAN IDは挿入されていない
@@ -94,7 +94,9 @@
 		- ネイティブVLANの場合は、VLAN IDが挿入されないという仕様がある
 			- ネイティブVLANは各インターフェースに設定し、デフォルトは1
 		- つまり、PC8からPC10にpingを飛ばした時はL2ヘッダにVLAN IDは挿入されない
+		- VLAN IDがないデータを受け取ったスイッチは、自身のネイティブVLANにデータを転送する
 		- SW4のFa0/3とSW5のFa0/3でネイティブVLANを揃えておかないと、VLANを跨いで通信が可能になってしまう
+		  id:: 661ffc91-3699-42c5-b524-062eb19e9a1d
 			- SW4のFa0/3のネイティブVLANは1のままにし、SW5のFa0/3のネイティブVLANは2にする
 				- ```
 				  SW5(config)#int fa0/3
