--- a/journals/2024_04_01.md
+++ b/journals/2024_04_01.md
@@ -54,6 +54,7 @@
 		- SW1はPC0にARP応答を送信し、これによってPC0はPC1のMACアドレスを知ることが出来る
 			- PC0のMACアドレスはMACアドレステーブルに学習されているので、フラッディングは発生しない
 			- PC0はPC1のMACアドレスをARPテーブルに保存する
+				- より正確には、ARP応答中のSOURCE IPとSOURCE MACの組み合わせを保存する
 			- 実は、APRリクエストがPC1に届いた時点で、PC1もPC0のMACアドレスをARPテーブルに保存していた
 		- ICMPのやりとりは省略
 		- 終了後のMACアドレステーブル
