--- a/journals/2024_06_03.md
+++ b/journals/2024_06_03.md
@@ -11,7 +11,7 @@
 		- free_listの各要素は、次の要素へのポインタと、空き領域のサイズを持つ
 			- スライドでは、最後の要素が持つポインタは、先頭の要素を指しているが、参考リンクの3個目によるとNULLらしい
 		- mallocを呼び出すと、free_listを順に辿っていき、必要な領域のサイズ(mallocの引数で渡す)以上の空き領域を見つけたら、その空き領域を使う
-			- 最初に見つけたものを使用する(first hit)
+			- 最初に見つけたものを使用する(first fit)
 			- 必要な領域のサイズよりも、空き領域のサイズの方が大きければ、空き領域の後半に割り当てる
 				- p8では前半に割り当てているけど
 			- 正確には、mallocの引数で指定したサイズよりも管理領域分だけ多く割り当てる
@@ -29,9 +29,9 @@
 			- 実装量が少ない
 			- フラグメンテーションが進まない限り、mallocはO(1)
 				- フラグメンテーションとは、小さい空き領域ばかりになり、全体の空き領域は十分でも、大きい領域を割り当てられなくなること
-				- first hitだからといって、O(1)とする理由が分からない
+				- first fitだからといって、O(1)とする理由が分からない
 		- 古典的mallocのデメリット
 			- 小さいmallocが多発すると、フラグメンテーションがすぐ進むことがデメリット
 			- freeがO(n)
-				- nってなんだ free_listの長さ?
+				- nってfree_listの長さ?
 			- フラグメンテーションが進むと、mallocでfree_listを一周し、大量のアクセスが行われるため、CPUのキャッシュを活かせず遅くなる
