--- a/journals/2024_06_05.md
+++ b/journals/2024_06_05.md
@@ -45,7 +45,7 @@
 		- キャッシュのヒット率が古典的mallocの方が良いことが理由
 		- mallocで確保したメモリへのアクセスする可能性が高いのは、malloc直後とfree直前
 		- freeされたばかりのメモリはキャッシュに載っている可能性が高い
-			- その周辺もキャッシュに載っている可能性が高い(空間局所性)
+			- その周辺もキャッシュに載っている可能性が高い(参照局所性)
 		- 次にmallocする時に、freeされたところとその周辺を優先して使うようにすれば、malloc直後のアクセスでキャッシュミスが減る
 			- メモリに書き込むのではなく、キャッシュに書き込みさえすれば良いということである
 		- 古典的mallocでは、freeされたところにlist_headを動かすようになっているので、キャッシュを活かせるようになっている
